--- a/PruebaPOI/nbproject/project.properties
+++ b/PruebaPOI/nbproject/project.properties
@@ -27,18 +27,18 @@ dist.dir=dist
 dist.jar=${dist.dir}/PruebaPOI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.poi-3.13-20150929.jar=C:\\Users\\jagam\\Documents\\Librer\u00edas y Utils\\poi-3.13\\poi-3.13-20150929.jar
-file.reference.poi-ooxml-3.13-20150929.jar=C:\\Users\\jagam\\Documents\\Librer\u00edas y Utils\\poi-3.13\\poi-ooxml-3.13-20150929.jar
-file.reference.poi-ooxml-schemas-3.13-20150929.jar=C:\\Users\\jagam\\Documents\\Librer\u00edas y Utils\\poi-3.13\\poi-ooxml-schemas-3.13-20150929.jar
-file.reference.xmlbeans-2.6.0.jar=C:\\Users\\jagam\\Documents\\Librer\u00edas y Utils\\poi-3.13\\ooxml-lib\\xmlbeans-2.6.0.jar
+file.reference.poi-3.13-20150929.jar-1=src\\libs\\poi-3.13-20150929.jar
+file.reference.poi-ooxml-3.13-20150929.jar-1=src\\libs\\poi-ooxml-3.13-20150929.jar
+file.reference.poi-ooxml-schemas-3.13-20150929.jar-1=src\\libs\\poi-ooxml-schemas-3.13-20150929.jar
+file.reference.xmlbeans-2.6.0.jar-1=src\\libs\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.poi-3.13-20150929.jar}:\
-    ${file.reference.poi-ooxml-3.13-20150929.jar}:\
-    ${file.reference.poi-ooxml-schemas-3.13-20150929.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.poi-3.13-20150929.jar-1}:\
+    ${file.reference.poi-ooxml-3.13-20150929.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.13-20150929.jar-1}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
