--- a/PruebaPOI/nbproject/project.properties
+++ b/PruebaPOI/nbproject/project.properties
@@ -38,8 +38,7 @@ javac.classpath=\
     ${file.reference.poi-3.13-20150929.jar-1}:\
     ${file.reference.poi-ooxml-3.13-20150929.jar-1}:\
     ${file.reference.poi-ooxml-schemas-3.13-20150929.jar-1}:\
-    ${file.reference.xmlbeans-2.6.0.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.xmlbeans-2.6.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
